<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_gradient"
    tools:context=".ui.UserInitialFragment">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="384dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="384dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="276dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_weight="1"
        android:background="@drawable/round_main_button"
        android:letterSpacing="0.3"
        android:text="@string/logInButton"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="65dp"

        android:layout_marginTop="45dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:background="@drawable/round_main_button"
        android:letterSpacing="0.3"
        android:text="@string/signUnButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="377dp"
        android:layout_height="109dp"
        android:layout_marginTop="92dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-thin"
        android:text="@string/pageTitle"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>